--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.1.9",
     "@radix-ui/react-slot": "^1.1.0",
-    "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query": "4.16",
+    "@tanstack/react-query-devtools": "4.16",
     "@tanstack/react-table": "^8.20.5",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
@@ -19,9 +21,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "postcss": "^8.4.49",
+    "qs": "^6.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.1",
+    "react-table": "^7.8.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7"
@@ -29,8 +33,10 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/node": "^22.10.1",
+    "@types/qs": "^6.9.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-table": "^7.7.20",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.15.0",
