--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@mui/icons-material": "^6.1.9",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "4.16",
     "@tanstack/react-query-devtools": "4.16",
     "@tanstack/react-table": "^8.20.5",
@@ -19,13 +24,16 @@
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.462.0",
+    "match-sorter": "^8.0.0",
     "postcss": "^8.4.49",
     "qs": "^6.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.1",
     "react-table": "^7.8.0",
+    "sort-by": "^1.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7"
