--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.0.1",
     "react-table": "^7.8.0",
-    "sort-by": "^1.2.0",
+    "react-use-websocket": "^4.11.1",
+    "sort-by": "^0.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7"
