--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "qs": "^6.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-router": "^7.0.1",
     "react-table": "^7.8.0",
     "react-use-websocket": "^4.11.1",
